--- a/AWS-RHEL/roles/aws_ec2/tasks/launch_ec2_ins.yml
+++ b/AWS-RHEL/roles/aws_ec2/tasks/launch_ec2_ins.yml
@@ -10,9 +10,10 @@
      vpc_subnet_id: "{{ subnet_id }}"
      security_group: "{{ security_group_id }}"
      network:
-       assign_public_ip: yes
+       assign_public_ip: true
+     state: running
      tags:
-       TowerManaged: True
+       TowerManaged: true
      wait: true
   register: ec2
 
@@ -20,7 +21,7 @@
   wait_for:
     host: "{{ item.public_dns_name }}"
     port: 22
-    delay: 60
-    timeout: 320
+    delay: 10
+    timeout: 60
     state: started
   with_items: "{{ ec2.instances }}"
